services/arch-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-frontend
  namespace: arch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-frontend
  template:
    metadata:
      labels:
        app: arch-frontend
    spec:
      containers:
      - name: nginx
        image: arch-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
