services/arch-frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-frontend
  namespace: arch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: arch.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: arch-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: arch.homelab.local
    http:
      paths:
      - backend:
          service:
            name: arch-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - arch.completeautomate.com
    - arch.homelab.local
